--- a/tp_2_jonatan_santillan/src/Contador/contador.module.css
+++ b/tp_2_jonatan_santillan/src/Contador/contador.module.css
@@ -2,7 +2,8 @@
     display: flex;
     padding: 5px;
     margin-top: 15px;
-    width: 500px;
+    margin-left: 55px;
+    width: 680px;
     height: 120px;
     border-radius: 12px;
     background-color: white;
@@ -11,7 +12,7 @@
   .datos{
     display: flex;
     margin: 0px auto;
-    width: 500px;
+    width: 650px;
     margin-top: 10px;
     margin-left: 10px;
     font-weight: bold;
