--- a/tp_5_jonatan_santillan/src/component/Sidebar/sidebar.module.css
+++ b/tp_5_jonatan_santillan/src/component/Sidebar/sidebar.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: space-;
     margin: 10px;
-    margin-left: 500px;
+    margin-left: 450px;
     padding: 10px;
     padding-bottom: 20px;
     width: 400px;
@@ -14,7 +14,7 @@
   
   .texto{
     color: white;
-    text-align: center;
+    text-align: left;
     margin-top: 10px;
     padding: 10px;
     font-size: 30px;
